--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,8 +5,74 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Calculator"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Calculator" Height="540" Width="335">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
 
+        <!--MenuBar-->
+        <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="5 5 5 0">
+            <Button Height="30" Padding="7 0 7 0"
+                    FontSize="20" FontFamily="Segoe Fluent Icons" Content="&#xe700;"/>
+            <TextBlock FontSize="20" Margin="5 0 0 0" Text="Standard"/>
+        </StackPanel>
+
+        <!--Result-->
+        <StackPanel Grid.Row="1">
+            <TextBlock></TextBlock>
+            <TextBlock Text="{Binding Result}"
+                       FontSize="50" HorizontalAlignment="Right"
+                       Padding="0 0 10 0"/>
+        </StackPanel>
+
+        <Grid Grid.Row="2" Margin="3">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+
+            <Button>%</Button>
+            <Button Grid.Column="1">CE</Button>
+            <Button Grid.Column="2">C</Button>
+            <Button Grid.Column="3" Content="&lt;-"/>
+
+            <Button Grid.Row="1" Grid.Column="0">1/x</Button>
+            <Button Grid.Row="1" Grid.Column="1">x^2</Button>
+            <Button Grid.Row="1" Grid.Column="2">&#x221A;x</Button>
+            <Button Grid.Row="1" Grid.Column="3">/</Button>
+
+            <Button Grid.Row="2" Grid.Column="0">7</Button>
+            <Button Grid.Row="2" Grid.Column="1">8</Button>
+            <Button Grid.Row="2" Grid.Column="2">9</Button>
+            <Button Grid.Row="2" Grid.Column="3">*</Button>
+
+            <Button Grid.Row="3" Grid.Column="0">4</Button>
+            <Button Grid.Row="3" Grid.Column="1">5</Button>
+            <Button Grid.Row="3" Grid.Column="2">6</Button>
+            <Button Grid.Row="3" Grid.Column="3">-</Button>
+
+            <Button Grid.Row="4" Grid.Column="0">1</Button>
+            <Button Grid.Row="4" Grid.Column="1">2</Button>
+            <Button Grid.Row="4" Grid.Column="2">3</Button>
+            <Button Grid.Row="4" Grid.Column="3">+</Button>
+
+            <Button Grid.Row="5" Grid.Column="0">+/-</Button>
+            <Button Grid.Row="5" Grid.Column="1">0</Button>
+            <Button Grid.Row="5" Grid.Column="2">.</Button>
+            <Button Grid.Row="5" Grid.Column="3">=</Button>
+        </Grid>
     </Grid>
 </Window>
