--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -44,35 +44,56 @@
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
 
-            <Button>%</Button>
+            <Grid.Resources>
+                <Style TargetType="Button" x:Key="BtnIconStyle">
+                    <Setter Property="FontFamily" Value="Segoe Fluent Icons"/>
+                </Style>
+            </Grid.Resources>
+
+            <Button Style="{StaticResource BtnIconStyle}"
+                    Content="&#xe94c;"/>
             <Button Grid.Column="1">CE</Button>
             <Button Grid.Column="2">C</Button>
-            <Button Grid.Column="3" Content="&lt;-"/>
+            <Button Grid.Column="3"
+                    Style="{StaticResource BtnIconStyle}"
+                    Content="&#xe94f;"/>
 
             <Button Grid.Row="1" Grid.Column="0">1/x</Button>
             <Button Grid.Row="1" Grid.Column="1">x^2</Button>
             <Button Grid.Row="1" Grid.Column="2">&#x221A;x</Button>
-            <Button Grid.Row="1" Grid.Column="3">/</Button>
+            <Button Grid.Row="1" Grid.Column="3"
+                    Style="{StaticResource BtnIconStyle}"
+                    Content="&#xe94a;"/>
 
             <Button Grid.Row="2" Grid.Column="0">7</Button>
             <Button Grid.Row="2" Grid.Column="1">8</Button>
             <Button Grid.Row="2" Grid.Column="2">9</Button>
-            <Button Grid.Row="2" Grid.Column="3">*</Button>
+            <Button Grid.Row="2" Grid.Column="3"
+                    Style="{StaticResource BtnIconStyle}"
+                    Content="&#xe947;"/>
 
             <Button Grid.Row="3" Grid.Column="0">4</Button>
             <Button Grid.Row="3" Grid.Column="1">5</Button>
             <Button Grid.Row="3" Grid.Column="2">6</Button>
-            <Button Grid.Row="3" Grid.Column="3">-</Button>
+            <Button Grid.Row="3" Grid.Column="3"
+                    Style="{StaticResource BtnIconStyle}"
+                    Content="&#xe949;"/>
 
             <Button Grid.Row="4" Grid.Column="0">1</Button>
             <Button Grid.Row="4" Grid.Column="1">2</Button>
             <Button Grid.Row="4" Grid.Column="2">3</Button>
-            <Button Grid.Row="4" Grid.Column="3">+</Button>
+            <Button Grid.Row="4" Grid.Column="3"
+                    Style="{StaticResource BtnIconStyle}"
+                    Content="&#xe948;"/>
 
-            <Button Grid.Row="5" Grid.Column="0">+/-</Button>
+            <Button Grid.Row="5" Grid.Column="0"
+                    Style="{StaticResource BtnIconStyle}"
+                    Content="&#xe94d;"/>
             <Button Grid.Row="5" Grid.Column="1">0</Button>
             <Button Grid.Row="5" Grid.Column="2">.</Button>
-            <Button Grid.Row="5" Grid.Column="3">=</Button>
+            <Button Grid.Row="5" Grid.Column="3"
+                    Style="{StaticResource BtnIconStyle}"
+                    Content="&#xe94e;"/>
         </Grid>
     </Grid>
 </Window>
