--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -37,9 +37,10 @@
 
         <!--Result-->
         <StackPanel Grid.Row="1" Margin="5 10 10 0">
-            <TextBlock></TextBlock>
+            <TextBlock Text="{Binding ExpressionBar}"
+                       FontSize="15" HorizontalAlignment="Right"/>
             <TextBlock Text="{Binding Result}"
-                       FontSize="50" HorizontalAlignment="Right"/>
+                       FontSize="45" HorizontalAlignment="Right"/>
         </StackPanel>
 
         <Grid Grid.Row="2" Height="30" Margin="3 10 3 0">
@@ -95,36 +96,47 @@
             <Button Grid.Row="1" Grid.Column="2">&#x221A;x</Button>
             <Button Grid.Row="1" Grid.Column="3"
                     Style="{StaticResource BtnIconStyle}"
-                    Content="&#xe94a;"/>
+                    Content="&#xe94a;" Command="{Binding DivideCommand}"/>
 
-            <Button Grid.Row="2" Grid.Column="0">7</Button>
-            <Button Grid.Row="2" Grid.Column="1">8</Button>
-            <Button Grid.Row="2" Grid.Column="2">9</Button>
+            <Button Grid.Row="2" Grid.Column="0" Content="7"
+                    Command="{Binding NumberCommand}" CommandParameter="7"/>
+            <Button Grid.Row="2" Grid.Column="1" Content="8"
+                    Command="{Binding NumberCommand}" CommandParameter="8"/>
+            <Button Grid.Row="2" Grid.Column="2" Content="9"
+                    Command="{Binding NumberCommand}" CommandParameter="9"/>
             <Button Grid.Row="2" Grid.Column="3"
                     Style="{StaticResource BtnIconStyle}"
-                    Content="&#xe947;"/>
+                    Content="&#xe947;" Command="{Binding MultiplyCommand}"/>
 
-            <Button Grid.Row="3" Grid.Column="0">4</Button>
-            <Button Grid.Row="3" Grid.Column="1">5</Button>
-            <Button Grid.Row="3" Grid.Column="2">6</Button>
+            <Button Grid.Row="3" Grid.Column="0" Content="4"
+                    Command="{Binding NumberCommand}" CommandParameter="4"/>
+            <Button Grid.Row="3" Grid.Column="1" Content="5"
+                    Command="{Binding NumberCommand}" CommandParameter="5"/>
+            <Button Grid.Row="3" Grid.Column="2" Content="6"
+                    Command="{Binding NumberCommand}" CommandParameter="6"/>
             <Button Grid.Row="3" Grid.Column="3"
                     Style="{StaticResource BtnIconStyle}"
-                    Content="&#xe949;"/>
+                    Content="&#xe949;" Command="{Binding SubtractCommand}"/>
 
-            <Button Grid.Row="4" Grid.Column="0">1</Button>
-            <Button Grid.Row="4" Grid.Column="1">2</Button>
-            <Button Grid.Row="4" Grid.Column="2">3</Button>
+            <Button Grid.Row="4" Grid.Column="0" Content="1"
+                    Command="{Binding NumberCommand}" CommandParameter="1"/>
+            <Button Grid.Row="4" Grid.Column="1" Content="2"
+                    Command="{Binding NumberCommand}" CommandParameter="2"/>
+            <Button Grid.Row="4" Grid.Column="2" Content="3"
+                    Command="{Binding NumberCommand}" CommandParameter="3"/>
             <Button Grid.Row="4" Grid.Column="3"
                     Style="{StaticResource BtnIconStyle}"
-                    Content="&#xe948;"/>
+                    Content="&#xe948;" Command="{Binding AddCommand}"/>
 
             <Button Grid.Row="5" Grid.Column="0"
                     Style="{StaticResource BtnIconStyle}"
                     Content="&#xe94d;"/>
-            <Button Grid.Row="5" Grid.Column="1">0</Button>
+            <Button Grid.Row="5" Grid.Column="1" Content="0"
+                    Command="{Binding NumberCommand}" CommandParameter="0"/>
             <Button Grid.Row="5" Grid.Column="2">.</Button>
             <Button Grid.Row="5" Grid.Column="3"
                     Style="{StaticResource BtnIconStyle}"
+                    Command="{Binding CalculateCommand}"
                     Content="&#xe94e;"/>
         </Grid>
     </Grid>
