--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Calculator"
+        xmlns:viewModel="clr-namespace:Calculator.ViewModel"
         mc:Ignorable="d"
         Title="Calculator" Height="540" Width="335">
     <Grid>
@@ -96,7 +97,8 @@
             <Button Grid.Row="1" Grid.Column="2">&#x221A;x</Button>
             <Button Grid.Row="1" Grid.Column="3"
                     Style="{StaticResource BtnIconStyle}"
-                    Content="&#xe94a;" Command="{Binding DivideCommand}"/>
+                    Content="&#xe94a;" Command="{Binding OperationCommand}"
+                    CommandParameter="{x:Static viewModel:EOperation.Divide}"/>
 
             <Button Grid.Row="2" Grid.Column="0" Content="7"
                     Command="{Binding NumberCommand}" CommandParameter="7"/>
@@ -106,7 +108,8 @@
                     Command="{Binding NumberCommand}" CommandParameter="9"/>
             <Button Grid.Row="2" Grid.Column="3"
                     Style="{StaticResource BtnIconStyle}"
-                    Content="&#xe947;" Command="{Binding MultiplyCommand}"/>
+                    Content="&#xe947;" Command="{Binding OperationCommand}"
+                    CommandParameter="{x:Static viewModel:EOperation.Multiply}"/>
 
             <Button Grid.Row="3" Grid.Column="0" Content="4"
                     Command="{Binding NumberCommand}" CommandParameter="4"/>
@@ -116,7 +119,8 @@
                     Command="{Binding NumberCommand}" CommandParameter="6"/>
             <Button Grid.Row="3" Grid.Column="3"
                     Style="{StaticResource BtnIconStyle}"
-                    Content="&#xe949;" Command="{Binding SubtractCommand}"/>
+                    Content="&#xe949;" Command="{Binding OperationCommand}"
+                    CommandParameter="{x:Static viewModel:EOperation.Subtract}"/>
 
             <Button Grid.Row="4" Grid.Column="0" Content="1"
                     Command="{Binding NumberCommand}" CommandParameter="1"/>
@@ -126,7 +130,8 @@
                     Command="{Binding NumberCommand}" CommandParameter="3"/>
             <Button Grid.Row="4" Grid.Column="3"
                     Style="{StaticResource BtnIconStyle}"
-                    Content="&#xe948;" Command="{Binding AddCommand}"/>
+                    Content="&#xe948;" Command="{Binding OperationCommand}"
+                    CommandParameter="{x:Static viewModel:EOperation.Add}"/>
 
             <Button Grid.Row="5" Grid.Column="0"
                     Style="{StaticResource BtnIconStyle}"
