--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -140,7 +140,8 @@
                     Content="&#xe94d;"/>
             <Button Grid.Row="5" Grid.Column="1" Content="0"
                     Command="{Binding NumberCommand}" CommandParameter="0"/>
-            <Button Grid.Row="5" Grid.Column="2">.</Button>
+            <Button Grid.Row="5" Grid.Column="2" Content="."
+                    Command="{Binding PointCommand}"/>
             <Button Grid.Row="5" Grid.Column="3"
                     Style="{StaticResource BtnIconStyle}"
                     Command="{Binding CalculateCommand}"
