--- a/App.xaml
+++ b/App.xaml
@@ -3,6 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Calculator">
     <Application.Resources>
-         
+         <ResourceDictionary Source="/Resources/Styles.xaml"/>
     </Application.Resources>
 </Application>
