--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Calculator"
         xmlns:viewModel="clr-namespace:Calculator.ViewModel"
+        xmlns:controls="clr-namespace:Calculator.Controls"
         mc:Ignorable="d"
         Title="Calculator" Height="540" Width="335">
     <Grid Background="#232323">
@@ -15,144 +16,12 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <!--MenuBar-->
-        <Grid Margin="5 15 5 0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-            </Grid.ColumnDefinitions>
+        <controls:MenuBar Margin="5 15 5 0"/>
 
-            <StackPanel Grid.Row="0" Orientation="Horizontal">
-                <Button Height="30" Padding="7 0 7 0"
-                    FontSize="15" FontFamily="Segoe Fluent Icons" Content="&#xe700;"/>
-                <TextBlock FontSize="20" Margin="5 0 0 0" Text="Standard"/>
-                <Button FontFamily="Segoe Fluent Icons" Content="&#xe8a7;"
-                        FontSize="15" Padding="7 0 7 0"
-                        Margin="5 0 0 0"/>
-            </StackPanel>
+        <controls:ResultBar Grid.Row="1" Margin="5 10 10 0" Foreground="PaleGreen"/>
 
-            <Button Grid.Column="1" HorizontalAlignment="Right"
-                    FontFamily="Segoe Fluent Icons"
-                    Content="&#xe81c;" FontSize="20" Padding="5"/>
-        </Grid>
+        <controls:MemoryBar Grid.Row="2" Height="30" Margin="3 10 3 0"/>
 
-        <!--Result-->
-        <StackPanel Grid.Row="1" Margin="5 10 10 0">
-            <TextBlock Text="{Binding ExpressionBar}"
-                       FontSize="15" HorizontalAlignment="Right"/>
-            <Viewbox StretchDirection="DownOnly" HorizontalAlignment="Right">
-                <TextBlock Text="{Binding ResultBar}" 
-                           FontSize="45" HorizontalAlignment="Right"/>
-            </Viewbox>
-        </StackPanel>
-
-        <Grid Grid.Row="2" Height="30" Margin="3 10 3 0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-            </Grid.ColumnDefinitions>
-
-            <Button Grid.Column="0" Content="MC"/>
-            <Button Grid.Column="1" Content="MR"/>
-            <Button Grid.Column="2" Content="M+"/>
-            <Button Grid.Column="3" Content="M-"/>
-            <Button Grid.Column="4" Content="MS"/>
-            <Button Grid.Column="5" Content="M&#x2335;"/>
-        </Grid>
-
-        <Grid Grid.Row="3" Margin="3">
-            <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-            </Grid.ColumnDefinitions>
-
-            <Button Style="{StaticResource BtnIconStyle}"
-                    Content="&#xe94c;"/>
-            <Button Grid.Column="1" Content="CE"
-                    Command="{Binding ClearECommand}"/>
-            <Button Grid.Column="2" Content="C"
-                    Command="{Binding ClearCommand}"/>
-            <Button Grid.Column="3"
-                    Style="{StaticResource BtnIconStyle}"
-                    Content="&#xe94f;"/>
-
-            <Button Grid.Row="1" Grid.Column="0">1/x</Button>
-            <Button Grid.Row="1" Grid.Column="1">x^2</Button>
-            <Button Grid.Row="1" Grid.Column="2">&#x221A;x</Button>
-            <Button Grid.Row="1" Grid.Column="3"
-                    Style="{StaticResource BtnIconStyle}"
-                    Content="&#xe94a;" Command="{Binding OperationCommand}"
-                    CommandParameter="{x:Static viewModel:EOperation.Divide}"/>
-
-            <Button Grid.Row="2" Grid.Column="0" Content="7"
-                    Style="{StaticResource BtnNumberStyle}"
-                    Command="{Binding NumberCommand}" CommandParameter="7"/>
-            <Button Grid.Row="2" Grid.Column="1" Content="8"
-                    Style="{StaticResource BtnNumberStyle}"
-                    Command="{Binding NumberCommand}" CommandParameter="8"/>
-            <Button Grid.Row="2" Grid.Column="2" Content="9"
-                    Style="{StaticResource BtnNumberStyle}"
-                    Command="{Binding NumberCommand}" CommandParameter="9"/>
-            <Button Grid.Row="2" Grid.Column="3"
-                    Style="{StaticResource BtnIconStyle}"
-                    Content="&#xe947;" Command="{Binding OperationCommand}"
-                    CommandParameter="{x:Static viewModel:EOperation.Multiply}"/>
-
-            <Button Grid.Row="3" Grid.Column="0" Content="4"
-                    Style="{StaticResource BtnNumberStyle}"
-                    Command="{Binding NumberCommand}" CommandParameter="4"/>
-            <Button Grid.Row="3" Grid.Column="1" Content="5"
-                    Style="{StaticResource BtnNumberStyle}"
-                    Command="{Binding NumberCommand}" CommandParameter="5"/>
-            <Button Grid.Row="3" Grid.Column="2" Content="6"
-                    Style="{StaticResource BtnNumberStyle}"
-                    Command="{Binding NumberCommand}" CommandParameter="6"/>
-            <Button Grid.Row="3" Grid.Column="3"
-                    Style="{StaticResource BtnIconStyle}"
-                    Content="&#xe949;" Command="{Binding OperationCommand}"
-                    CommandParameter="{x:Static viewModel:EOperation.Subtract}"/>
-
-            <Button Grid.Row="4" Grid.Column="0" Content="1"
-                    Style="{StaticResource BtnNumberStyle}"
-                    Command="{Binding NumberCommand}" CommandParameter="1"/>
-            <Button Grid.Row="4" Grid.Column="1" Content="2"
-                    Style="{StaticResource BtnNumberStyle}"
-                    Command="{Binding NumberCommand}" CommandParameter="2"/>
-            <Button Grid.Row="4" Grid.Column="2" Content="3"
-                    Style="{StaticResource BtnNumberStyle}"
-                    Command="{Binding NumberCommand}" CommandParameter="3"/>
-            <Button Grid.Row="4" Grid.Column="3"
-                    Style="{StaticResource BtnIconStyle}"
-                    Content="&#xe948;" Command="{Binding OperationCommand}"
-                    CommandParameter="{x:Static viewModel:EOperation.Add}"/>
-
-            <Button Grid.Row="5" Grid.Column="0"
-                    Style="{StaticResource BtnIconStyle2}"
-                    Content="&#xe94d;" Command="{Binding NegateCommand}"/>
-            <Button Grid.Row="5" Grid.Column="1" Content="0"
-                    Style="{StaticResource BtnNumberStyle}"
-                    Command="{Binding NumberCommand}" CommandParameter="0"/>
-            <Button Grid.Row="5" Grid.Column="2" Content="."
-                    Style="{StaticResource BtnNumberStyle}"
-                    Command="{Binding PointCommand}"/>
-            <Button Grid.Row="5" Grid.Column="3"
-                    Style="{StaticResource BtnIconStyle}"
-                    Command="{Binding CalculateCommand}"
-                    Content="&#xe94e;"/>
-        </Grid>
+        <controls:StandardInputBar Grid.Row="3" Margin="3"/>
     </Grid>
 </Window>
