--- a/Controls/StandardInputBar.xaml
+++ b/Controls/StandardInputBar.xaml
@@ -25,13 +25,13 @@
 
         <Button Style="{StaticResource BtnIconStyle}"
         Content="&#xe94c;"/>
-        <Button Grid.Column="1" Content="CE"
-        Command="{Binding ClearECommand}"/>
-        <Button Grid.Column="2" Content="C"
-        Command="{Binding ClearCommand}"/>
-        <Button Grid.Column="3"
-        Style="{StaticResource BtnIconStyle}"
-        Content="&#xe94f;"/>
+        <Button Grid.Row="0" Grid.Column="1" Content="CE"
+                Command="{Binding ClearECommand}"/>
+        <Button Grid.Row="0" Grid.Column="2" Content="C"
+                Command="{Binding ClearCommand}"/>
+        <Button Grid.Row="0" Grid.Column="3"
+                Style="{StaticResource BtnIconStyle}"
+                Content="&#xe94f;"/>
 
         <Button Grid.Row="1" Grid.Column="0">1/x</Button>
         <Button Grid.Row="1" Grid.Column="1">x^2</Button>
