--- a/Controls/MenuBar.xaml
+++ b/Controls/MenuBar.xaml
@@ -4,25 +4,52 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Calculator.Controls"
+             xmlns:viewModel="clr-namespace:Calculator.ViewModel"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <DataTemplate DataType="{x:Type viewModel:DateCalculationViewModel}"/>
+    </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-        <ColumnDefinition/>
-        <ColumnDefinition/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
         <StackPanel Grid.Row="0" Orientation="Horizontal">
-            <Button Height="30" Padding="7 0 7 0"
-                    FontSize="15" FontFamily="Segoe Fluent Icons" Content="&#xe700;"/>
-            <TextBlock FontSize="20" Margin="5 0 0 0" Text="Standard"/>
-            <Button FontFamily="Segoe Fluent Icons" Content="&#xe8a7;"
-                    FontSize="15" Padding="7 0 7 0"
-                    Margin="5 0 0 0"/>
+            <Menu Background="{StaticResource Button.Static.Background}">
+                <MenuItem Height="30" Padding="7 7 7 0"
+                          FontSize="15" FontFamily="Segoe Fluent Icons" Header="&#xe700;">
+                    <MenuItem FontFamily="Segoe UI" Header="_Standard"
+                              Command="{Binding SelectViewModelCommand}"
+                              CommandParameter="{Binding StandardViewModel}"/>
+                    <MenuItem FontFamily="Segoe UI" Header="_Date"
+                              Command="{Binding SelectViewModelCommand}"
+                              CommandParameter="{Binding DateCalculationViewModel}"/>
+                </MenuItem>
+            </Menu>
+            <Viewbox StretchDirection="DownOnly" Margin="5 0 0 0">
+                <TextBlock FontSize="20" Text="{Binding SelectedViewModel.GetName }"/>
+            </Viewbox>
+            <ContentControl Content="{Binding SelectedViewModel}">
+                <ContentControl.Resources>
+                    <DataTemplate DataType="{x:Type viewModel:StandardViewModel}">
+                        <Button FontFamily="Segoe Fluent Icons" Content="&#xe8a7;"
+                                FontSize="15" Padding="7 0 7 0"
+                                Margin="5 0 0 0"/>
+                    </DataTemplate>
+                </ContentControl.Resources>
+            </ContentControl>
         </StackPanel>
 
-        <Button Grid.Column="1" HorizontalAlignment="Right"
-                FontFamily="Segoe Fluent Icons"
-                Content="&#xe81c;" FontSize="20" Padding="5"/>
+        <ContentControl Grid.Column="1" Content="{Binding SelectedViewModel}">
+            <ContentControl.Resources>
+                <DataTemplate DataType="{x:Type viewModel:StandardViewModel}">
+                    <Button HorizontalAlignment="Right" 
+                            FontFamily="Segoe Fluent Icons"
+                            Content="&#xe81c;" FontSize="20" Padding="5"/>
+                </DataTemplate>
+            </ContentControl.Resources>
+        </ContentControl>
     </Grid>
 </UserControl>
