--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -13,6 +13,9 @@
         <DataTemplate DataType="{x:Type viewModel:StandardViewModel}">
             <view:StandardView/>
         </DataTemplate>
+        <DataTemplate DataType="{x:Type viewModel:DateCalculationViewModel}">
+            <view:DateCalculationView/>
+        </DataTemplate>
     </Window.Resources>
     <Grid Background="#232323">
         <Grid.RowDefinitions>
